hphp/hack/test/typecheck/const_visibility_modifiers/const_narrow_visiblity.php.exp
File "const_narrow_visiblity.php", line 8, characters 7-7:
Class B does not correctly implement all required members  (Typing[4113])
File "const_narrow_visiblity.php", line 8, characters 17-17:
Some members are incompatible with those declared in type A
Read the following to see why:
File "const_narrow_visiblity.php", line 9, characters 17-19:
This member visibility is: private
File "const_narrow_visiblity.php", line 5, characters 24-26:
public was expected
